--- a/index.html
+++ b/index.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <link rel="stylesheet" href="style.css">
-<head>Portfolio</head>
+<head>Professional Portfolio</head>
 
 <body>
-<h1>Brittany B. </h1>
-<h2>Professional Portfolio</h2>
+<h1>Welcome, </h1>
+<h2>My name is Brittany Burney</h2>
 <div class="first">
-  <p>Projects<span class="Info">Launch</span><br />
-  <small>This is my projects that I have been working on.  </small></p>
+  <p><button>Projects</button><span class="Info">Completed Projects</span><br />
+  <small>These are projects that I have been working on as an aspiring software engineer.  </small></p>
 </div>
 
 <div class="second">
-  <p>About Me<span class="Info">More About Me</span><br />
-  <small>Enjoy. </small></p>
+  <p><link rel="#"><button>Professional History</button><span class="Info"> More about who I am as a pofessional.</span><br />
+  <small><ul>Veteran: Former Naval Reactor Mechanical Operator</ul>
+    <ul>Professional Photographer</ul>
+    <ul>Operations Technician</ul></small></p>
 </div>
   
 <div class="third">
-  <p>Professional History<span class="Info">Clarifying Info</span><br />
-  <small>More personal info about me and my professional history.</small></p>
+  <p><link rel="#"> <button>More about me</button><span class="Info">Getting to know who I am</span><br />
+  <small>Loacated in Round Rock, TX.</small></p>
 </div>
 </body>
